# project-akhir-struktur-data-grup-b-slow-respon

./: .cache  README.md  data.json  estore.db  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.python  users.json
.streamlit/: secrets.toml
