[project]
name = "project-akhir-struktur-data-grup-b-slow-respon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "spotipy==2.23.0",
    "pandas",
    "numpy",
    "plotly",
    "google-generativeai>=0.8.3"
]
